# devforge-ai

./: .env.example  .gitignore  LICENSE  README.md  package.json  worklog.md
agent-ctx/: 3-c-vision-builder.md  3-e-web-intel-builder.md  3-f-snippet-builder.md
db/: custom.db
installer/setup-builder/: README.md  build-all.bat  build-inno-setup.bat  build-setup.bat  devforge-setup.iss  devforge-setup.sed  install-logic.bat
installer/setup-builder-v2/: README.txt  build-silent.bat  build.bat  devforge-setup.iss  install-logic-aumid.ps1  install-logic.bat  release.bat  run-server.cmd  start-devforge.bat  start-devforge.vbs  stop-devforge.vbs
installer/windows/: README.md  install.bat  quick-start.bat  setup.ps1
messages/: ar.json  en.json
mini-services/task-service/: index.ts  package.json
prisma/: schema.prisma
public/: manifest.json  sw.js
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/activity/: route.ts
src/app/api/asr/: route.ts
src/app/api/chat/: route.ts
src/app/api/chat/clear/: route.ts
src/app/api/chat/history/: route.ts
src/app/api/chat/rename/: route.ts
src/app/api/chat/sessions/: route.ts
src/app/api/clipboard/: route.ts
src/app/api/clipboard/[id]/: route.ts
src/app/api/clipboard/ai-process/: route.ts
src/app/api/computer/agent/: route.ts
src/app/api/computer/agent/approve/: route.ts
src/app/api/computer/clipboard/: route.ts
src/app/api/computer/files/: route.ts
src/app/api/computer/keyboard/: route.ts
src/app/api/computer/mouse/: route.ts
src/app/api/computer/process/: route.ts
src/app/api/computer/screenshot/: route.ts
src/app/api/computer/shell/: route.ts
src/app/api/computer/tasks/: route.ts
src/app/api/computer/windows/: route.ts
src/app/api/context/: route.ts
src/app/api/images/: route.ts
src/app/api/images/[id]/: route.ts
src/app/api/images/generate/: route.ts
src/app/api/memory/: route.ts
src/app/api/memory/[id]/: route.ts
src/app/api/memory/extract/: route.ts
src/app/api/plugin/code-formatter/format/: route.ts
src/app/api/plugin/translator/translate/: route.ts
src/app/api/proactive/: route.ts
src/app/api/proactive/analyze/: route.ts
src/app/api/provider/: route.ts
src/app/api/provider/ollama-status/: route.ts
src/app/api/provider/verify-encryption/: route.ts
src/app/api/quick-action/: route.ts
src/app/api/snippets/: route.ts
src/app/api/snippets/[id]/: route.ts
src/app/api/tts/: route.ts
src/app/api/update/check/: route.ts
src/app/api/update/download/: route.ts
src/app/api/update/install/: route.ts
src/app/api/vision/analyze/: route.ts
src/app/api/web/read/: route.ts
src/app/api/web/search/: route.ts
src/app/api/workflow/: route.ts
src/app/api/workflow/[id]/: route.ts
src/app/api/workflow/[id]/play/: route.ts
src/app/api/workflow/record/: route.ts
src/components/: language-provider.tsx  theme-toggle.tsx
src/components/features/: activity-feed.tsx  chat-panel.tsx  clipboard-manager.tsx  computer-use.tsx  image-studio.tsx  memory-manager.tsx  multi-screen-dashboard.tsx  overview.tsx  placeholder.tsx  proactive-assistant.tsx  quick-actions.tsx  snippet-vault.tsx  task-board.tsx  vision-lab.tsx  voice-assistant.tsx  voice-lab.tsx  web-intel.tsx  workflow-studio.tsx
src/components/layout/: about-dialog.tsx  command-palette.tsx  footer.tsx  loading-bar.tsx  plugin-manager.tsx  settings.tsx  shortcuts-help.tsx  sidebar.tsx  update-notifier.tsx
src/components/pwa/: register-sw.tsx
src/components/ui/: lightbox.tsx
src/hooks/: use-context.tsx  use-hotkey.ts  use-quick-actions.ts  use-wake-word.ts
src/i18n/: request.ts
src/lib/: ai-providers.ts  branding.ts  clipboard-store.ts  context-engine.ts  crypto.ts  db.ts  features.ts  memory-engine.ts  plugin-registry.ts  plugin-template-source.ts  plugin-types.ts  proactive-engine.ts  quick-actions.ts  screen-manager.ts  updater.ts  voices.ts  workflow-engine.ts  zai.ts
src/lib/computer-use/: agent-loop.ts  executor.ts  powershell.ts  prompts.ts  screenshot.ts  security.ts  types.ts
src/plugins/: index.tsx  registry.json
src/plugins/_template/: plugin.tsx
src/plugins/code-formatter/: plugin.tsx
src/plugins/quick-notes/: plugin.tsx
src/plugins/translator/: plugin.tsx
tauri-wrapper/: README.md
tauri-wrapper/frontend/components/: native-title-bar.tsx
tauri-wrapper/frontend/lib/: tauri-bridge.ts
tauri-wrapper/frontend/styles/: native-title-bar.css
tauri-wrapper/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
tauri-wrapper/src-tauri/capabilities/: default.json
tauri-wrapper/src-tauri/icons/: README.md
tauri-wrapper/src-tauri/src/: config.rs  main.rs  server.rs  single_instance.rs  tray.rs  window.rs
tool-results/: read_1782729773830_051a8d66348a.txt  read_1782730328313_a4b98ecd7b05.txt  read_1782730333383_7e5bd1da2d2b.txt  read_1782731697706_f791e44f33e1.txt
